# learn-to-play-poe1

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-ALTERNATE  NOTICE  README.md  ROADMAP.md  cooldown.toml  l2p-poe1.toml.example  learn-to-play.code-workspace  vcpkg.json
.agents/: AGENTS.md
.claude/: CLAUDE.md  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-windows.yml  ci-windows.yml  ci.yml
data/: schema.sql  seed.sql
data/areas/: campaign_act_1.sql  campaign_act_10.sql  campaign_act_10_vaal_side_area.sql  campaign_act_1_vaal_side_area.sql  campaign_act_2.sql  campaign_act_2_vaal_side_area.sql  campaign_act_3.sql  campaign_act_3_vaal_side_area.sql  campaign_act_4.sql  campaign_act_4_vaal_side_area.sql  campaign_act_5.sql  campaign_act_5_vaal_side_area.sql  campaign_act_6.sql  campaign_act_6_vaal_side_area.sql  campaign_act_7.sql  campaign_act_7_vaal_side_area.sql  campaign_act_8.sql  campaign_act_8_vaal_side_area.sql  campaign_act_9.sql  campaign_act_9_vaal_side_area.sql  map_vaal_side_area.sql
dev/: parse_npc_dialog.py  perf_baseline_prev.py  refilter_logs.py
dev/area_seeds/: gen_area_seed.py
dev/log_split/: refilter_logs.py
docs/: cli.md  schema.md
docs/decisions/: 001-technology-stack.md  002-qt-native-styling-over-qss.md  004-game-addon-interaction-principles.md  005-ui-thread-responsiveness.md
docs/measurements/: client.md  perf_metrics.md
docs/rationale/: chat.md  exit-confirmation.md
installer/: windows.iss
poe-info-service/: main.go
poe-info-service/internal/query/: query.go  query_test.go
poe-info-service/internal/server/: server.go
src/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  ChatPage.cpp  ChatPage.h  Cli.cpp  Cli.h  CloseOrphanSessionsWorker.cpp  CloseOrphanSessionsWorker.h  CurrentPage.cpp  CurrentPage.h  Database.cpp  Database.h  DatabaseHealth.cpp  DatabaseHealth.h  DatabaseHealthWorker.cpp  DatabaseHealthWorker.h  DialogHash.h  DmPage.cpp  DmPage.h  GameOverlay.cpp  GameOverlay.h  ListEditor.cpp  ListEditor.h  LiveEvent.h  LiveEventBus.cpp  LiveEventBus.h  LogIngestWorker.cpp  LogIngestWorker.h  MainWindow.cpp  MainWindow.h  NavBar.cpp  NavBar.h  NotificationWidget.cpp  NotificationWidget.h  NotificationsPanel.cpp  NotificationsPanel.h  PastPage.cpp  PastPage.h  QueryService.cpp  (+19 more)
src/core/: AppConfig.cpp  AppConfig.h  DeferredTaskQueue.cpp  DeferredTaskQueue.h  MainWindow.cpp  MainWindow.h
src/platform/: OverlayKeepalive.cpp  WindowTracker.h  WindowTrackerWindows.cpp
src/services/: ServiceManager.cpp
src/ui/: Theme.cpp
src/ui/chat/: ChatPage.cpp  ChatPage.h  DmPage.cpp  DmPage.h
src/ui/log/: LogPage.cpp  LogPage.h  SessionViewPage.cpp  SessionViewPage.h
src/ui/overlay/: GameOverlay.cpp  GameOverlay.h
src/ui/settings/: SettingsPage.cpp  SettingsPage.h
tests/: CMakeLists.txt  dpi_drag_test.rs  perf_targets.json  test_database_sessions.cpp  test_dpi.cpp  test_log_startup.cpp  test_perf_metrics.cpp  test_startup_timing.cpp
tools/: msvc-env.sh
