[package]
name = "learn-to-play-poe1"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
